# ChangeLog for dev-perl/SDL
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/SDL/ChangeLog,v 1.15 2012/06/24 12:59:31 tove Exp $

  24 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
  Update CPAN upstream info

  02 Jun 2012; Samuli Suominen <ssuominen@gentoo.org> metadata.xml:
  Leave the maintaining for games and perl. I can still contribute here if
  required later.

  02 Jun 2012; Samuli Suominen <ssuominen@gentoo.org> -SDL-2.537_pre02.ebuild:
  old

*SDL-2.540 (02 Jun 2012)

  02 Jun 2012; Samuli Suominen <ssuominen@gentoo.org> +SDL-2.540.ebuild:
  Version bump.

*SDL-2.537_pre02 (21 May 2012)

  21 May 2012; Samuli Suominen <ssuominen@gentoo.org> +SDL-2.537_pre02.ebuild:
  Version bump.

  14 Apr 2012; Samuli Suominen <ssuominen@gentoo.org> -SDL-2.2.6.ebuild:
  old

  14 Apr 2012; Markus Meier <maekke@gentoo.org> SDL-2.536.ebuild:
  x86 stable, bug #408579

  20 Mar 2012; Jeroen Roovers <jer@gentoo.org> SDL-2.536.ebuild:
  Stable for HPPA (bug #408579).

  20 Mar 2012; Agostino Sarubbo <ago@gentoo.org> SDL-2.536.ebuild:
  Stable for amd64, wrt bug #408581

  01 Mar 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
  Add missing cpan remote-id tags in metadata.xml (#406287)

  08 Feb 2012; Jeroen Roovers <jer@gentoo.org> SDL-2.536.ebuild:
  Marked ~hppa (bug #399649).

  30 Jan 2012; Samuli Suominen <ssuominen@gentoo.org> SDL-2.2.6.ebuild:
  Remove ppc keywording wrt #399649

  28 Jan 2012; Raúl Porcel <armin76@gentoo.org> SDL-2.2.6.ebuild:
  Drop alpha/ia64/sparc keywords

  22 Jan 2012; Samuli Suominen <ssuominen@gentoo.org> SDL-2.536.ebuild:
  Restore SRC_TEST="do" because tests run fine here.

*SDL-2.536 (21 Jan 2012)

  21 Jan 2012; Samuli Suominen <ssuominen@gentoo.org> +SDL-2.536.ebuild:
  Version bump wrt #356535 by Satoshi Hayazaki. Rename dev-perl/sdl-perl
  to dev-perl/SDL.

  20 Jan 2010; Torsten Veller <tove@gentoo.org> sdl-perl-2.2.6.ebuild: