@@ -1,6 +1,6 @@
 DIST SDL-2.536.tar.gz 2485524 SHA256 f702ce2ee513f1895c2ede778d3719988e96b4a2aed52fa00887a420c8d6e900 SHA512 7dc3a5ed4aeb54c83a913b75c7f58bb8e21c30d54f7cbc1c7ce9c1f51c5bbbdcc965bed1a806c78d5e15f9966f51c61d2ebaad3e63cee6b0d353d38cdef35132 WHIRLPOOL 88113c6045a1b6ccb014985755e3d1a110f659934308146fd2c40b524f09470934126e5551aa55e8a326f3e0877ce2497013b9fa8edb93700e05c0615d5841fb
 DIST SDL-2.540.tar.gz 2490785 SHA256 031866be84e6bbd7bb082aed26265ad64f84dc867db5239476921746a41e6a1f SHA512 6c85ea179174415da40fe20f27086626b56570d8dbb6416957fb3236550d27ad893f171c7aedf7c6cda2ca6f2078dfad5d8813e428b49c920c1f8487416193b3 WHIRLPOOL 1cf79640cf56237f7ed439cd2c13ef60e4978762867495d50ad7db06f75685022fb4409265ef4243bdb688c467eb66acbeab40e18ee5f688511f1e60a52894f9
 EBUILD SDL-2.536.ebuild 1073 SHA256 c189cbbbe796998df8a01880d4d21e83b09e761c1e57e4f13b3072b098df0934 SHA512 8ba8d487abaef4aedf4a6025c0dec6d8b71d228599c0d1874d9875b268bda5015a52c8f1b95b97b243f2a49176da52b0273fe49b8d5e716e061b79748b168a8d WHIRLPOOL 2a73ea43f04a16e701472ba0515ad6e7495edb465e919e6ffd18b33ca8ce9180cdee993281628a62785191ddfa893414e18c1d75baffa21c7ba0ffd2d06b901a
-EBUILD SDL-2.540.ebuild 1030 SHA256 aa03b25cc6da6b38bbf97e6f62827a1841b051e6d1d5b64c559d5f7ecad06001 SHA512 0586a3c1a5b56eb1ee9641ecc0ffdae9626b43fc9b2c2b70961ce77b1ee7947e3230c5f872a503e488bc921e5cb89b6e4631dedc75942773df374e34f1d84735 WHIRLPOOL 8d1540738c8c5b8a832e75aa8cee5398e4a615d97b1d3a39f30501d21f9f7d4a9a9572f295c4cd050389dadb228745bfa067b92d7166b8b784a817fbcf3786c9
-MISC ChangeLog 12235 SHA256 892b8bf007fbe67e9124f52ae6ab17a06b1a531310dcc72b36bd07e7f76d7cc5 SHA512 a30ae666e9d3a05e7b59172d5d3e2e1dd0463355780c280abd7227d9a039ec127d7eaa906120d506e7894ae03c5e83c2e2467b5c40ad6128b83dc38db50ca632 WHIRLPOOL 22097fe84c88280f44fe81ee04eaa237ee59aa869c6d607518e5e1852de29ac8444d70d0cd587c8f7375b479bec3d33c59b337132013e88ef674bd8fd74a3766
+EBUILD SDL-2.540.ebuild 1039 SHA256 acb94a25d7d19f8867386c6fe95d45df6c3bbe748a8ff312356be41b7b74c8a2 SHA512 1a2fc7991650a18830dad357ec862e6fa2c860fbe64718ff26a77eec3a8d01b76ff53449f71dde791443512c4dc31e60346301cbfb62f77313589534908f763a WHIRLPOOL c21b66254ad7eb8b0ca6fa104e5795d6e716b605e617d620de9408dfd4e893c5c8200b309d4163aa98dbef4e396bf5e448373e58ede315704362373ec900d0d1
+MISC ChangeLog 12378 SHA256 89220b8a25cb965a49153486ddcb75913ac73521db65956d4a92dd8825466d7c SHA512 df386f73146df20035d489e7853b3a9990123bf6703e5766cfc0de84c167643d238e03f6c16f473f16567d4f56c6bb9415c1021e7086f4429081b9fe5c17d9bf WHIRLPOOL dea4673d6f3f9a04d7afe303e07a817c4a85904eeb84fb2f88b33f854d38e21e8bb02e5dbbcc21f25aa7ad9a0424400f34b5f9e72730b916a6f74c7596ad80d0
 MISC metadata.xml 5225 SHA256 3d40ad42c19f38f156f26a105516690827750adc3536c9c2cad58b39a33c6cd9 SHA512 eb462cc9f6302c190b1809c70caa3a996f9a9dc3aa471b1f1539868c7860855238c17d2f66ff182623be0ce8a0595f945b650b2433db16f887dbb88dabfeef44 WHIRLPOOL de440b8148b54d3f7f730864a4eae25c95411553f41a479669e88a949e4ab1c686666ae5233df6aeedb9316292fb56cdab88c9ebc950b1880acb71edb7964831
