@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/SDL
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/SDL/ChangeLog,v 1.15 2012/06/24 12:59:31 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/SDL/ChangeLog,v 1.16 2012/10/21 03:10:08 mr_bones_ Exp $
+
+  21 Oct 2012; Michael Sterrett <mr_bones_@gentoo.org> SDL-2.540.ebuild:
+  require a newer perl-Module-Build as mentioned in bug #424535
 
   24 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
   Update CPAN upstream info
